# lut-shop

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  android.sh  mac.sh
.github/workflows/: android-apk.yml
apps/android/: README.md  settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/app/src/main/cpp/: CMakeLists.txt  lutshop_core_jni.cpp
apps/ios/: README.md
apps/ios/LutShop/: AppState.swift  Info.plist  LutShop-Bridging-Header.h  LutShopApp.swift  Models.swift
apps/ios/LutShop.xcodeproj/: project.pbxproj
apps/ios/LutShop/Core/: CameraDiscoveryService.swift  CameraReceiveService.swift  CoreImageLutRenderer.swift  LutShopCoreBridge.swift  LutShopCppBridge.h  LutShopCppBridge.mm  WatermarkRenderer.swift  ZipLutArchiveExtractor.swift
apps/ios/LutShop/Resources/: Localizable.xcstrings
assets/luts/: README.md  catalog.json
core/: CMakeLists.txt
core/include/lutshop/: bridge_c.h  core.hpp  cube.hpp  import.hpp  lut_catalog.hpp  recommendation.hpp  session.hpp  types.hpp  workflow.hpp
core/src/: bridge_c.cpp  core.cpp  cube.cpp  import.cpp  lut_catalog.cpp  recommendation.cpp  session.cpp  workflow.cpp
core/tests/: workflow_tests.cpp
docs/architecture/: mobile-cpp-core.md
docs/design/: prototype-integration-summary.md
docs/product-design/reference/: prototype-design-qa.md
docs/superpowers/plans/: 2026-06-11-lut-shop-mobile-cpp-core.md  2026-06-12-sony-hotspot-receive.md  2026-06-13-android-ios-parity.md  2026-06-13-preview-sync-selected-adjustment.md
docs/superpowers/specs/: 2026-06-11-lut-shop-mvp-design.md
(+36 files in other folders)
